@@ -4,7 +4,6 @@ This is a list of some things to do:
 
 - dirlist caching
 - skip/retry button
-- get default folder info
 
 - suggestions of 	"Travis Evans" <travisgevans@earthlink.net>:
 <<
